syntax = "proto3";

package prices;

import "common/errors.proto";
import "common/numbers.proto";
import "common/statuses.proto";
import "common/timeseries.proto";
import "datasources/datasources.proto";
import "google/protobuf/timestamp.proto";
import "markets/markets.proto";

// Backed by table 'prices'
message Price {
  string id = 1; // System Key: id is generated by the server or the database
  datasources.DataSource source = 2; // source + market + type + timestamp form the Human-Readable Key (unique identifier)
  markets.Market market = 3; // source + market + type + timestamp form the Human-Readable Key (unique identifier)
  markets.PriceType type = 4; // source + market + type + timestamp form the Human-Readable Key (unique identifier)
  google.protobuf.Timestamp timestamp = 5; // source + market + type + timestamp form the Human-Readable Key (unique identifier)
  common.Decimal price = 6;
  common.Status status = 7;
}

message List {
  repeated Price list = 1;
}

message PriceKey {
  datasources.Select source = 1;
  markets.Select market = 2;
  markets.PriceType type = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message Select {
  oneof select {
    string by_id = 1;
    PriceKey by_price_key = 2;
  }
}

message SelectList {
  repeated Select list = 1;
}

message CreateRequest {
  // id is generated by the server or the database
  datasources.Select source = 1;
  markets.Select market = 2;
  markets.PriceType type = 3;
  google.protobuf.Timestamp timestamp = 4;
  common.Decimal price = 5;
  common.Status status = 6;
}

message CreateResponse {
  oneof response {
    common.Error error = 1;
    Price price = 2;
  }
}

message UpdateRequest {
  Select select = 1;
  optional datasources.Select source = 2;
  optional markets.PriceType type = 4;
  optional markets.Select market = 3;
  optional google.protobuf.Timestamp timestamp = 5;
  optional common.Decimal price = 6;
  optional common.Status status = 7;
}

message UpdateResponse {
  oneof response {
    common.Error error = 1;
    Price price = 2;
  }
}

// GetRequest is expected to return a single value.
message GetRequest {
  Select select = 1;
}

// An error is returned if there is more than one record found.
message GetResponse {
  oneof response {
    common.Error error = 1;
    Price price = 2;
  }
}

// GetList will use SQL 'LIKE' instead of '=' for string fields
message GetListRequest {
  optional datasources.GetListRequest source = 1;
  optional markets.GetListRequest market = 2;
  optional markets.PriceTypeList type = 3;
  optional common.TimestampValueList timestamp = 4;
  optional common.DecimalValueList price = 5;
  optional common.StatusList status = 6;
}

message GetListResponse { // ListResponse is formatted for streaming
  oneof response {
    common.Error error = 1;
    Price price = 2;
  }
}

// A delete request is just an update request with status set to TERMINATED.
message DeleteRequest {
  Select select = 1;
}

message DeleteResponse {
  oneof response {
    common.Error error = 1;
    Price price = 2;
  }
}

// Time Series

message TimeValue {
  google.protobuf.Timestamp timestamp = 1;
  common.Decimal value = 2;
}

message TimeSeries {
  repeated TimeValue list = 1;
}

message GetTimeSeriesRequest {
  datasources.DataSource source = 1;
  markets.Market market = 2;
  markets.PriceType type = 3;
  optional common.Timescale timescale = 4; // Default: UNSPECIFIED
  common.TimestampValueList timestamp = 5;
}

message GetTimeSeriesResponse {
  datasources.Select source = 1;
  markets.Select market = 2;
  markets.PriceType type = 3;
  optional common.Timescale timescale = 4; // Only when UNSPECIFIED
  TimeSeries values = 5;
}
